--- a/app/views/layouts/redesign/header/locale_warn/_base.html.slim
+++ b/app/views/layouts/redesign/header/locale_warn/_base.html.slim
@@ -25,12 +25,12 @@ ruby:
     .col-md-12
       = warning.long_text
 
-      a#go-to-store-button[href="#"]
+      = link_to warning.site_version_path, id: 'go-to-store-button' do
         = image_tag(warning.flag_url)
         = warning.button_text
 
   #locale-warn-bar-mobile.row.visible-xs-block.visible-sm-block
     .col-xs-12
-      a#go-to-store-button[href="#"]
+      = link_to warning.site_version_path, id: 'go-to-store-button' do
         = image_tag(warning.flag_url)
         = warning.button_text
