--- a/app/assets/stylesheets/redesign/_alerts.css.scss
+++ b/app/assets/stylesheets/redesign/_alerts.css.scss
@@ -65,6 +65,7 @@
 
 .auto-discount-applied {
   @extend .alert-sale;
+  top: 110px;
   width:100%;
   background-color: #000000;
   padding: 5px 0 15px;
