--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -21,10 +21,11 @@ form.quiz-section id="#{ question.name }-question"
               input.form-control type="email" name="email" placeholder="email@example.com" value=(@user_style_profile.email) required="required"
             input.btn.btn-block.btn-primary type="submit" value="Next" data-action="next"
         .col-6.col-middle.text-center
-          .form-centered.facebook-box data-action="import-from-fb"
-            h2 Import my details from Facebook.
-            .btn.btn-facebook 
-              ' &nbsp;
+          .form-centered.facebook-box
+            div data-action="import-from-fb"
+              h2 Import my details from Facebook.
+              .btn.btn-facebook 
+                ' &nbsp;
             - unless spree_user_signed_in?
               .or or
               = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }, class: 'btn btn-primary btn-login'
