[feat] wrap application layout content on CSS id

--- a/app/views/layouts/redesign/application.html.slim
+++ b/app/views/layouts/redesign/application.html.slim
@@ -16,7 +16,8 @@ doctype html
     = render 'layouts/redesign/google_tag_manager'
     = render 'layouts/redesign/header'
 
-    = yield
+    #content-container
+      = yield
 
     = render 'layouts/redesign/footer'
     = render 'layouts/redesign/shopping_bag'
