[feat] close button on locale warn
extract locale warn logic into before filter

add margin when warning is showing up

remove ruby from base locale warn partial

global module name is not necessary on concern

Class loading problems is a normal spring problem + Rails preloading.

--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -12,3 +12,8 @@ $font-brand-serif: Forum, serif;
 // Form
 $form-control-height-md: 45px;
 // @end Form
+
+// Mega Menu
+$mega-menu-desktop-height: 105px;
+$mega-menu-mobile-height: 115px;
+// @end Mega Menu
