--- a/app/assets/stylesheets/redesign/_layout.css.scss
+++ b/app/assets/stylesheets/redesign/_layout.css.scss
@@ -1,3 +1,15 @@
 body {
   font-family: $font-family-secondary;
 }
+
+/////////// content container //////////
+
+#content-container {
+  margin-top: $mega-menu-desktop-height;
+}
+
+@media (max-width: 992px) {
+  #content-container {
+    margin-top: $mega-menu-mobile-height;
+  }
+}
