--- a/app/assets/stylesheets/redesign/header/locale_warn.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_warn.css.scss
@@ -86,12 +86,32 @@ $locale-warn-mobile-height: 74px;
 
 // Content container behaviour is shown
 
-#content-container.locale-warning-active {
-  margin-top: $mega-menu-desktop-height + $locale-warn-desktop-height;
-}
+.locale-warning-active {
+  // Content Container
+  #content-container {
+    margin-top: $mega-menu-desktop-height + $locale-warn-desktop-height;
+  }
 
-@media (max-width: 992px) {
-  #content-container.locale-warning-active {
-    margin-top: $mega-menu-mobile-height + $locale-warn-mobile-height;
+  @media (max-width: 992px) {
+    #content-container {
+      margin-top: $mega-menu-mobile-height + $locale-warn-mobile-height;
+    }
+  }
+
+  // Search
+  .search-bar {
+    top: $mega-menu-desktop-height + $locale-warn-desktop-height;
+  }
+
+  @media (max-width: 992px) {
+    .search-bar {
+      top: $mega-menu-mobile-height + 30px; // Locale selector doesn't have a fixed height
+    }
+  }
+
+  // Mega menu drop down
+  .mega-menu {
+    top: $mega-menu-desktop-height + $locale-warn-desktop-height;
   }
 }
+
