--- a/engines/admin_ui/app/views/admin_ui/reports/sale_items/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/reports/sale_items/show.html.slim
@@ -13,15 +13,4 @@
 
 h2 10 Row Sample
 
-div.pre-scrollable style='max-height:100%;'
-  table.table.table-condensed
-    thead
-      tr
-        - head = @rows.first
-        - head.keys.each do |k|
-          th = k
-    tbody
-      - @rows.each do |row|
-        tr
-          - row.values.each do |v|
-            td = v
+= render partial: 'admin_ui/reports/report_rows_preview', locals: { rows: @rows }
