--- a/app/assets/stylesheets/redesign/_vars.css.scss
+++ b/app/assets/stylesheets/redesign/_vars.css.scss
@@ -17,3 +17,8 @@ $form-control-height-md: 45px;
 $mega-menu-desktop-height: 105px;
 $mega-menu-mobile-height: 115px;
 // @end Mega Menu
+
+// Locale Warn
+$locale-warn-desktop-height: 54px;
+$locale-warn-mobile-height: 74px;
+// @end Locale Warn
