--- a/app/assets/stylesheets/redesign/header/locale_warn.css.scss
+++ b/app/assets/stylesheets/redesign/header/locale_warn.css.scss
@@ -8,8 +8,8 @@ $color-white: #FFF;
   background-color: $color-black;
   color: $color-white;
   font-family: "brandon-grotesque", sans-serif;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: normal;
   padding: 10px 0;
   text-align: center;
   text-transform: none;
@@ -21,14 +21,13 @@ $color-white: #FFF;
     margin-left: 10px;
     padding: 2px 5px;
     text-transform: uppercase;
-
     &:hover {
       background-color: lighten($color-black, 25%);
     }
 
     img {
       height: 20px;
-      margin-bottom: -4px;
+      margin-bottom: -6px;
       margin-right: 10px;
       vertical-align: baseline;
     }
@@ -39,14 +38,14 @@ $color-white: #FFF;
     font-size: 30px;
     position: absolute;
     right: 20px;
-    top: 5px;
+    top: 0px;
   }
 }
 
 // Mobile
 #locale-warn-bar-mobile {
   background-color: $color-black;
-  font-size: 18px;
+  font-size: 14px;
   padding: 20px 0;
   text-align: center;
   text-transform: uppercase;
@@ -65,7 +64,7 @@ $color-white: #FFF;
 
     img {
       height: 20px;
-      margin-bottom: -4px;
+      margin-bottom: -6px;
       margin-right: 10px;
       vertical-align: baseline;
     }
@@ -76,7 +75,7 @@ $color-white: #FFF;
     font-size: 30px;
     position: absolute;
     right: 10px;
-    top: 15px;
+    top: 10px;
   }
 
 }
@@ -111,4 +110,3 @@ $color-white: #FFF;
     top: $mega-menu-desktop-height + $locale-warn-desktop-height;
   }
 }
-
