Show errors when unable to load order for new returns

--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -8,6 +8,8 @@
 
     = render 'users/shared/tabs', active_tab: 'orders'
 
+    = render :partial =>'shared/redesign/flash_messages'
+
     .row
       .col-md-12
         - if @orders.empty?
