New Report orders with total paid

--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -10,6 +10,7 @@ li class="#{active_link_to_class(reports_payments_path)} #{active_link_to_class(
     li = active_link_to 'Payments', reports_payments_path
     li = active_link_to 'Sale Items', reports_sale_items_path
     li = active_link_to 'Coupon Orders', reports_coupon_adjusted_orders_path
+    li = active_link_to 'Order Totals', reports_order_totals_path
 
 li class=active_link_to_class(caches_path)
   a href="#"
