--- a/engines/admin_ui/app/views/admin_ui/reports/order_totals/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/reports/order_totals/show.html.slim
@@ -6,6 +6,26 @@
   .ibox-title
     = page_title
   .ibox-content
+    p The impetus for this report is for a quick way to get order totals/paid data into the Master Returns Spreadsheet.
+
+    p
+      ' See;
+      a href="https://docs.google.com/spreadsheets/d/1bhNF248Z3u2k4vcf1kf9un63jTBIC2MbZgHh-1DQU1g/edit#gid=0" Master Returns Spreadsheet
+
+    p To update the data in the spreadsheet, you can generate a new report, and import the CSV as a new sheet, or replace the existing <strong>OrderTotalsInSpree</strong> sheet.
+
+    p There is a column in the <strong>Returns</strong> sheet, called <strong>Spree Amount Paid</strong> which should have the formula.
+
+    pre
+      code
+       ' = IFERROR(VLOOKUP(D1, OrderTotalsInSpree,5,false), "")
+
+    p Where <strong>D</strong> is the <strong>Spree Order Number</strong> column, and <strong>OrderTotalsInSpree</strong> is a named range for the entire <strong>OrderTotalsInSpree</strong> sheet.
+
+    p This collects the data from the sheet, and shows it next to returns. This shows the actual final paid amount, including discounts & other adjustments.
+
+  .ibox-content
+
     = form_tag admin_ui.reports_order_totals_path, method: 'post', class: 'form-horizontal'
       .form-group
         .col-lg-12
