--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -7,10 +7,10 @@ li class="#{active_link_to_class(reports_payments_path)} #{active_link_to_class(
     span.nav-label Reports
     span.fa.arrow
   ul.nav.nav-second-level.collapse aria-expanded="false" style="height: 0px;"
-    li = active_link_to 'Payments', reports_payments_path
-    li = active_link_to 'Sale Items', reports_sale_items_path
-    li = active_link_to 'Coupon Orders', reports_coupon_adjusted_orders_path
-    li = active_link_to 'Order Totals', reports_order_totals_path
+    = active_link_to 'Payments', reports_payments_path, wrap_tag: :li
+    = active_link_to 'Sale Items', reports_sale_items_path, wrap_tag: :li
+    = active_link_to 'Coupon Orders', reports_coupon_adjusted_orders_path, wrap_tag: :li
+    = active_link_to 'Order Totals', reports_order_totals_path, wrap_tag: :li
 
 li class=active_link_to_class(caches_path)
   a href="#"
@@ -18,8 +18,8 @@ li class=active_link_to_class(caches_path)
     span.nav-label Backend
     span.fa.arrow
   ul.nav.nav-second-level.collapse aria-expanded="false" style="height: 0px;"
-    li = active_link_to 'Caches', caches_path
-    li = active_link_to 'Sidekiq', sidekiq_web_path
+    = active_link_to 'Caches', caches_path, wrap_tag: :li
+    = active_link_to 'Sidekiq', sidekiq_web_path, wrap_tag: :li
 
 = menu_item spree.admin_path,   'Spree Admin', icon: 'shopping-cart'
 = menu_item main_app.root_path, 'Website',     icon: 'globe', exact: true
