--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -1,7 +1,16 @@
-= menu_item root_path,            'Dashboard',          icon: 'dashboard',  exact: true
-= menu_item return_requests_path, 'Returns Management', icon: 'thumbs-down'
+ruby:
+  reports_active = [
+    reports_payments_path,
+    reports_sale_items_path,
+    reports_coupon_adjusted_orders_path,
+    reports_order_totals_path
+  ].any? { |path| is_active_link?(path) }
 
-li class="#{active_link_to_class(reports_payments_path)} #{active_link_to_class(reports_sale_items_path)}"
+= menu_item root_path, 'Dashboard', icon: 'dashboard', exact: true
+= menu_item return_requests_path, 'Returns Management', icon: 'thumbs-down'
+= menu_item preferences_path, 'Preferences', icon: 'cog', exact: true
+
+li class=('active' if reports_active)
   a href="#"
     i.fa.fa-line-chart
     span.nav-label Reports
@@ -21,6 +30,5 @@ li class=active_link_to_class(caches_path)
     = active_link_to 'Caches', caches_path, wrap_tag: :li
     = active_link_to 'Sidekiq', sidekiq_web_path, wrap_tag: :li
 
-= menu_item spree.admin_path,   'Spree Admin', icon: 'shopping-cart'
-= menu_item main_app.root_path, 'Website',     icon: 'globe', exact: true
-
+= menu_item spree.admin_path, 'Spree Admin', icon: 'shopping-cart'
+= menu_item main_app.root_path, 'Website', icon: 'globe', exact: true
