--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 /////////// locale warn //////////
 
 @import 'redesign/header/locale_warn';
@@ -532,6 +534,8 @@ li#cart-trigger {
   }
 }
 
+/////////// side menu (hamburger) //////////
+
 #sideMenu {
   display: block;
   height: 100%;
@@ -572,8 +576,7 @@ li#cart-trigger {
 
   z-index: 2000;
   background-color: #f8f8f8;
-  -webkit-transition: margin-left 0.7s; /* Safari */
-  transition: margin-left 0.7s;
+  @include transition(margin-left 0.4s);
 
   .navbar-header {
     background-color: #e7e7e7;
@@ -678,9 +681,5 @@ li#cart-trigger {
 }
 
 .mobileAnimation{
-  -webkit-transition: height 0.5s;
-  -moz-transition: height 0.5s;
-  -ms-transition: height 0.5s;
-  -o-transition: height 0.5s;
-  transition: height 0.5s;
+  @include transition(height 0.4s);
 }
