Move all checkout views into versioned dir

--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -29,7 +29,7 @@ ruby:
         .cart-item-info
           .heading
             span.qty 
-              =' "#{product.quantity}"
+              => "#{product.quantity}"
             = link_to product.name, collection_product_path(product), class: 'cart-item-title'
           .clearfix
             .pull-left.small
