--- a/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
+++ b/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
@@ -2,7 +2,7 @@
   a.menu-item--link.active-hover href=profile_path
     | my account
   .account-menu.mega-menu.hidden-sm.account-list
-    .account.container-fluid
+    .mega-menu-account.container-fluid
       ul
         li
           = link_to 'My Moodboard', wishlist_path, id: 'moodboard-trigger'
