--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -52,7 +52,7 @@ ruby:
       sideMenuTrigger:        '#side-menu-trigger',
       close:                  '#sideMenu #close',
       arrowImg:               '.arrow img',
-      dropdownMenu:           '.dropdown-menu'
+      dropdownMenu:           '.responsive-nav-dropdown'
     });
   "
 
@@ -84,13 +84,15 @@ ruby:
           = link_to root_path do
             = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
-        ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
+        ul.nav-list.pull-left.hidden-sm.hidden-xs.hidden-xxs
           = render partial: 'layouts/redesign/mega_menu/shop'
+          li.menu-item
+            = link_to 'style quiz', '#', class: 'menu-item--link'
           = render partial: 'layouts/redesign/mega_menu/lookbook'
           li.menu-item
             = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
 
-        ul.secondary.pull-right
+        ul.nav-list.pull-right
           - if Features.active?(:moodboard)
             li.menu-item.hidden-xs.hidden-sm
               = link_to wishlist_path, class: 'menu-item--link', id: 'moodboard-trigger' do
@@ -128,52 +130,33 @@ ruby:
     - unless disable_notices?
       = render 'layouts/redesign/notices'
 
-#sideMenu
-  nav.navbar.navbar-default.visible-xs.visible-sm
-    .navbar-header
-      a.navbar-brand href="#"  SHOP
-      a#close
-        = image_tag('Hamburger.svg', height: '25px')
-    .main-menu
-      ul.nav.navbar-nav
-        li
-          a
-            | EVENTS
-            span.arrow
-              = image_tag('icon-arrow-right.png')
-          ul.dropdown-menu.mobileAnimation
-            = render :partial => '/layouts/redesign/event'
-        li
-          a
-            | STYLES
-            span.arrow
-              = image_tag('icon-arrow-right.png')
-          ul.dropdown-menu.mobileAnimation
-            = render :partial => '/layouts/redesign/style'
-        li
-          a
-            | COLORS
-            span.arrow
-              = image_tag('icon-arrow-right.png')
-          ul.dropdown-menu.mobileAnimation
-            = render :partial => '/layouts/redesign/color'
-        li
-          a
-            | EXPRESS MAKING
-            span.arrow
-              = image_tag('icon-arrow-right.png')
-          ul.dropdown-menu.mobileAnimation
-            li = link_to 'Dresses made in 48 hours', fast_making_dresses_path
-      .all-dresses
-        center
-          = button_to 'View all dresses', dresses_path, class: 'btn btn-block btn-black', method: :get
-      .clearfix
-      .account-login
-        = link_to profile_path, class: "menu-item--link active-hover", rel: 'nofollow' do
-          = image_tag "_icons/my-account.svg", class: 'nav-mobile-logo', alt: 'my account'
-          span
-            | Account login
-
-
+#sideMenu.responsive-nav-wrapper.visible-tablet-and-less
+  .responsive-nav-header.clearfix
+    h4.responsive-nav-title SHOP
+    a#close = image_tag('Hamburger.svg', height: '25px')
+  nav
+  ul.responsive-nav
+    li
+      a.responsive-nav-link EVENTS
+      .responsive-nav-dropdown
+        ul = render :partial => '/layouts/redesign/event'
+    li
+      a.responsive-nav-link STYLES
+      .responsive-nav-dropdown
+        ul = render :partial => '/layouts/redesign/style'
+    li
+      a.responsive-nav-link COLORS
+      .responsive-nav-dropdown
+        ul = render :partial => '/layouts/redesign/color'
+    li
+      a.responsive-nav-link EXPRESS MAKING
+      .responsive-nav-dropdown
+        ul: li = link_to 'Dresses made in 48 hours', fast_making_dresses_path
+    .text-center
+      = button_to 'View all dresses', dresses_path, class: 'btn btn-black responsive-nav-btn', method: :get
+      = link_to profile_path, class: "btn responsive-nav-btn", rel: 'nofollow' do
+        = image_tag "_icons/my-account.svg", class: 'nav-mobile-logo', alt: 'my account'
+        | &nbsp;
+        span Account login
 
 = render 'layouts/redesign/campaigns/auto_apply_promo_code'
