--- a/app/views/layouts/redesign/mega_menu/_lookbook.html.slim
+++ b/app/views/layouts/redesign/mega_menu/_lookbook.html.slim
@@ -1,8 +1,8 @@
 li.shop.menu-item
   a.menu-item--link.active-hover href="#"
     | Lookbook
-  .mega-menu.hidden-sm.story-list
-    .stories.container-fluid.center
+  .mega-menu.hidden-sm
+    .mega-menu-stories.container-fluid
 
       .col-md-2
         = link_to luxe_collection_path do
